--- a/my-project/package.json
+++ b/my-project/package.json
@@ -21,7 +21,11 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
+    "react-scroll": "^1.8.9",
     "react-transition-group": "^4.4.5",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-scroll": "^1.8.7"
   }
 }
