--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,8 @@ jobs:
     steps:
       # 1. コードをチェックアウト
       - uses: actions/checkout@v3
+        with:
+          path: /my-project
 
       # 2. 必要なツールをセットアップ
       - uses: oven-sh/setup-bun@v1
@@ -38,4 +40,4 @@ jobs:
       - run: bun next export
 
       # 4. S3にアップロード
-      - run: aws s3 sync ./out s3://${{ env.S3_BUCKET_NAME }}
+      - run: aws s3 sync ./out s3://${{ env.S3_BUCKET_NAME }}/src
