--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           path: my-project
+      - name: List directory contents
+        run: |
+          ls -la
+          pwd
 
       # 2. 必要なツールをセットアップ
       - uses: oven-sh/setup-bun@v1
@@ -39,6 +43,7 @@ jobs:
       - name: Install and Build in my-project directory
         run: |
           cd my-project
+          ls -la
           bun install
           bunx next build
           bun next export
