--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,6 @@ jobs:
     steps:
       # 1. コードをチェックアウト
       - uses: actions/checkout@v3
-      - name: List directory contents
-        run: |
-          ls -la
-          pwd
       # 2. 必要なツールをセットアップ
       - uses: oven-sh/setup-bun@v1
       - uses: aws-actions/configure-aws-credentials@v1
@@ -39,12 +35,10 @@ jobs:
       # 3. ビルド処理
       - name: Install and Build in my-project directory
         run: |
-          ls -la
           cd my-project
-          ls -la
           bun install
           bunx next build
           bun next export
 
       # 4. S3にアップロード
-      - run: aws s3 sync ./my-project/out s3://${{ env.S3_BUCKET_NAME }}/src
+      - run: aws s3 sync ./my-project/out s3://${{ env.S3_BUCKET_NAME }}
